; ModuleID = '/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_newdraw.c_CG_KeyEvent.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/cgame/extr_cg_newdraw.c_CG_KeyEvent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i64, %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }
%struct.TYPE_5__ = type { i32, i32, i32* }

@cg = common dso_local global %struct.TYPE_6__ zeroinitializer, align 8
@PM_NORMAL = common dso_local global i64 0, align 8
@PM_SPECTATOR = common dso_local global i64 0, align 8
@qfalse = common dso_local global i64 0, align 8
@CGAME_EVENT_NONE = common dso_local global i32 0, align 4
@cgs = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@K_MOUSE2 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @CG_KeyEvent(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %2
  br label %45

8:                                                ; preds = %2
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @cg, i32 0, i32 1, i32 0), align 8
  %10 = load i64, i64* @PM_NORMAL, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %20, label %12

12:                                               ; preds = %8
  %13 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @cg, i32 0, i32 1, i32 0), align 8
  %14 = load i64, i64* @PM_SPECTATOR, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %16, label %24

16:                                               ; preds = %12
  %17 = load i64, i64* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @cg, i32 0, i32 0), align 8
  %18 = load i64, i64* @qfalse, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %20, label %24

20:                                               ; preds = %16, %8
  %21 = load i32, i32* @CGAME_EVENT_NONE, align 4
  %22 = call i32 @CG_EventHandling(i32 %21)
  %23 = call i32 @trap_Key_SetCatcher(i32 0)
  br label %45

24:                                               ; preds = %16, %12
  %25 = load i32, i32* %3, align 4
  %26 = load i64, i64* %4, align 8
  %27 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cgs, i32 0, i32 1), align 4
  %28 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cgs, i32 0, i32 0), align 8
  %29 = call i32 @Display_HandleKey(i32 %25, i64 %26, i32 %27, i32 %28)
  %30 = load i32*, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cgs, i32 0, i32 2), align 8
  %31 = icmp ne i32* %30, null
  br i1 %31, label %32, label %33

32:                                               ; preds = %24
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cgs, i32 0, i32 2), align 8
  br label %45

33:                                               ; preds = %24
  %34 = load i32, i32* %3, align 4
  %35 = load i32, i32* @K_MOUSE2, align 4
  %36 = icmp eq i32 %34, %35
  br i1 %36, label %37, label %44

37:                                               ; preds = %33
  %38 = load i64, i64* %4, align 8
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %44

40:                                               ; preds = %37
  %41 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cgs, i32 0, i32 1), align 4
  %42 = load i32, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cgs, i32 0, i32 0), align 8
  %43 = call i32* @Display_CaptureItem(i32 %41, i32 %42)
  store i32* %43, i32** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @cgs, i32 0, i32 2), align 8
  br label %44

44:                                               ; preds = %40, %37, %33
  br label %45

45:                                               ; preds = %7, %20, %44, %32
  ret void
}

declare dso_local i32 @CG_EventHandling(i32) #1

declare dso_local i32 @trap_Key_SetCatcher(i32) #1

declare dso_local i32 @Display_HandleKey(i32, i64, i32, i32) #1

declare dso_local i32* @Display_CaptureItem(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
